k8s/expense-tracker-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-tracker-app
  namespace: expense-tracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: expense-tracker-app
  template:
    metadata:
      labels:
        app: expense-tracker-app
    spec:
      containers:
        - name: expense-tracker-app
          image: violetakapchevska/expense-tracker-kii:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
