k8s/expense-tracker-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-service
  namespace: expense-tracker
spec:
  type: ClusterIP
  selector:
    app: expense-tracker-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
