k8s/expense-tracker-postgres-primary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-primary
  namespace: expense-tracker
spec:
  type: ClusterIP
  selector:
    app: postgres-primary
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
