k8s/expense-tracker-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: expense-tracker
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
