k8s/expense-tracker-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
  namespace: expense-tracker
spec:
  ingressClassName: nginx
  rules:
    - host: expense-tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker-service
                port:
                  number: 8080
